style(escrow__md): fix white space
This commit includes changes to white spaces on md screens.
The changes include:

- Adjusting text size and removing white spaces from escrow info block.
- Replacement of mobile phone image with tablet phone image in the
escrow image block.

These changes ensure that the escrow block renders well on md devices
and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -1684,17 +1684,21 @@ vertical-align: top;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
-  padding: 7rem 0;
+  gap: 2.3rem;
+  padding: 5rem 0;
 }
 
 .escrow__social-box {
-  flex-basis: 26%;
+  flex-basis: 20%;
 }
 
  .escrow__social-box-hidden,
- .escrow__social-box-hidden1 {
+ .escrow__social-box-hidden1  {
   display:none
+}
+
+.escrow__social-box-hidden1:nth-child(4) {
+  display:block;
 }
 
 .escrow__social {
@@ -1704,7 +1708,7 @@ vertical-align: top;
 }
 
 .escrow__info-block {
-  min-height: 65rem;
+  min-height: 55rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -1720,9 +1724,10 @@ vertical-align: top;
   flex-direction: column;
   justify-content: center;
   background: #f0eeeb;
-  padding: 0 10%; 
-  border-radius:2% 2% 0 0;
-  gap:1rem;
+  padding: 0 5%; 
+  gap:1.1rem;
+  border-radius:2% 2% 0 0; 
+  margin-bottom:-10rem;
 }
 
 .escrow__info-heading-block {
@@ -1731,7 +1736,7 @@ vertical-align: top;
 }
 
 .escrow__info-heading {
-  font-size: 2.7rem;
+  font-size: 2.8rem;
   font-weight: 600;
   color: #000000;
   line-height: 1.2;
@@ -1739,9 +1744,13 @@ vertical-align: top;
 
 .escrow__info-text-block {
   min-height: 10rem;
-  width: 92%;
+  width: 100%;
   display: flex;
   align-items: center;
+}
+
+.escrow__info-text {
+  font-size:2rem;
 }
 
 .escrow__info-link-block {
@@ -1753,6 +1762,8 @@ vertical-align: top;
 
 .escrow__info-link {
   text-decoration: underline;
+  font-size:2rem;
+  z-index: 5;
 }
 
 .escrow__info-image-block {
@@ -1761,15 +1772,14 @@ vertical-align: top;
   display:flex;
   justify-content: center; 
   background: #f0eeeb;  
-  border-radius:0 0 2% 2%;
+  border-radius:0 0 2% 2%;  
 }
 
 .escrow__info-image {
-  min-height: 42rem;
+  min-height: 26rem;
   width: 90%;
-  background:url(assets/Phone\ Mockup\ \(Mobile\).png) no-repeat center center;
-  background-size:auto;   
-  margin-top:-10rem; 
+  background:url(assets/Phone\ Mockup\ \(Tablet\).png) no-repeat center center;
+  background-size:contain;    
 }
 
 .escrow__info-img { 
